examples/i18n/contents/error/404/de.inc.php
<p>
Seite nicht gefunden!
</p>
